# HomeAssistant-Test-Harness

./: .gitattributes  .gitignore  .markdownlint_style.rb  .pre-commit-config.yaml  .yamllint  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_checks.sh  setup_dev_env.sh
.claude/: settings.json
.claude/hooks/: allow-web-fetch-trusted-sources.sh
.claude/skills/verify/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-feature_request.md  02-bug_report.md
.github/instructions/: documentation.instructions.md  python-source.instructions.md  tests.instructions.md
.github/workflows/: ci.yaml  claude-code-review.yml  claude.yml  copilot-setup-steps.yml  release.yaml  triaging-gh-issues.yml
documentation/: development.md  fixtures.md  installation.md  troubleshooting.md  usage.md
examples/: persistent_entities.yaml  test_assert_entity_state.py  test_basic_usage.py  test_entity_management.py  test_performance.py  test_time_machine.py
examples/config/: configuration.yaml  fakesecrets.yaml
examples/home_assistant/: configuration.yaml
src/ha_integration_test_harness/: __init__.py  appdaemon_client.py  conftest.py  docker_manager.py  exceptions.py  homeassistant_client.py  time_machine.py
src/ha_integration_test_harness/containers/: docker-compose.yaml
src/ha_integration_test_harness/containers/appdaemon/: appdaemon.yaml.template  entrypoint.sh
src/ha_integration_test_harness/containers/homeassistant/: entrypoint.sh  generate_long_lived_token.sh
src/ha_integration_test_harness/containers/libfaketime/: README.md  install_libfaketime.sh
src/ha_integration_test_harness/custom_components/ha_test_harness/: __init__.py  binary_sensor.py  entity.py  input_boolean.py  light.py  manifest.json  sensor.py  switch.py
